--- a/src/app/DataHub/home/home.component.html
+++ b/src/app/DataHub/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row mt-2">
+    
     <div class="col col-md-4 offset-5">
       <a routerLink="/Datahub/create" class="btn btn-primary">Add Details</a>
 
@@ -31,7 +32,7 @@
                     <td>
                        <a  [routerLink]="['/Datahub/edit/',data.id]" class="btn btn-primary" >Edit</a>
                        &nbsp; 
-                       <a  [routerLink]="['/Datahub/edit/',data.id]"  class="btn btn-danger" >Delete</a>
+                       <button class="btn btn-danger" (click)="delete(data.id)">Delete</button>
                       
 
                     </td>
